--- a/scratch.html
+++ b/scratch.html
@@ -55,7 +55,7 @@
             </li>
             <ul>
                 <li>
-                    I have only been here once but the water is so blue and clear
+                    I have only been here once but is the clearest water
                 </li>
             </ul>
         </ol>
